# Protocol-Buffer-Example

./: CMakeLists.txt  Protobuf Kurulumu.md  README.md
Client/: CMakeLists.txt  Client.cpp  Client.h
Client/ProtoFiles/: ClientData.pb.cc  ClientData.pb.h
Server/: CMakeLists.txt  Server.cpp  Server.h  ServerData.proto
Server/ProtoFiles/: ServerData.pb.cc  ServerData.pb.h
